@@ -31,6 +31,11 @@ The following is a list of deprecated interfaces.
      - 5.0
      - N/A
 
+   * - ``sphinx.ext.autodoc.Documenter.get_object_members()``
+     - 3.4
+     - 6.0
+     - ``sphinx.ext.autodoc.ClassDocumenter.get_object_members()``
+
    * - ``sphinx.ext.autodoc.DataDeclarationDocumenter``
      - 3.4
      - 5.0
